# AITutor

./: .gitignore  pyproject.toml  setup.sh  streamlit_app.py  t.md  tables_info.json  test_llama_parse.py
app/: llm.py  pdf_ingest.py  prompt.py
