[project]
name = "ai-tutor"
version = "0.1.0"
description = "AI Tutor POC"
authors = [{ name = "Pratik Ghodke", email = "pratik.ghodke@sarvaha.com" }]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = ["pymupdf (>=1.25.3,<2.0.0)", "ipykernel (>=6.29.5,<7.0.0)", "agno (>=1.1.0,<2.0.0)", "pypdf (>=5.3.0,<6.0.0)", "pymilvus (>=2.5.4,<3.0.0)", "openai (>=1.62.0,<2.0.0)", "common (>=0.1.2,<0.2.0)", "pytesseract (>=0.3.13,<0.4.0)", "pdf2image (>=1.17.0,<2.0.0)", "pdfreader (>=0.1.15,<0.2.0)", "chromadb (>=0.6.3,<0.7.0)", "vision-parse (>=0.1.13,<0.2.0)", "sentence-transformers (>=3.4.1,<4.0.0)", "camelot-py[cv] (>=1.0.0,<2.0.0)", "pillow (>=11.1.0,<12.0.0)", "pdfminer-six (>=20240706,<20240707)", "streamlit (>=1.42.2,<2.0.0)", "sqlalchemy (>=2.0.38,<3.0.0)"]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
